<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="fill_parent"
    android:layout_height="140dp"


   >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp">

        <TextView
            android:id="@+id/class_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/class_1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/class_location"
            android:layout_below="@+id/class_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/location"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/class_payment"
            android:layout_below="@+id/class_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/payment_per_class"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_below="@+id/class_payment"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/class_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/class_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150sp"
                android:text="@string/date"
                android:textSize="18sp" />



        </LinearLayout>





    </RelativeLayout>
</android.support.v7.widget.CardView>