<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ingresos.user.studentapp.MainActivity">



    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp">

        <EditText
            android:id="@+id/full_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:lines="1"
            android:padding="8dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/input_name"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:padding="8dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/input_email"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp">

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:lines="1"
            android:padding="8dp" />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_mobileno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/input_password"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp">

        <EditText
            android:id="@+id/mobileno"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="Mobile No"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:lines="1"
            android:padding="8dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/signup"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/ll1"
        android:text="SignUp"
        android:textColor="#FFFF"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:layout_below="@+id/input_mobileno"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <com.ingresos.user.studentapp.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/profile" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:layout_margin="10sp"
            android:text="@string/choose_your_picture"
            android:id="@+id/textView" />
    </LinearLayout>


</RelativeLayout>
